[gd_scene load_steps=4 format=2]

[ext_resource path="res://sfx/Sfx_evt_beep2.wav" type="AudioStream" id=1]
[ext_resource path="res://ui/ChoicesContainer.gd" type="Script" id=2]
[ext_resource path="res://ui/ChoiceLabel.tscn" type="PackedScene" id=3]

[node name="ChoicesContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Choice2" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Choice3" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Choice4" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="EnableInputTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 10.0
